页面样式重构

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -10,14 +10,13 @@
     #ffecf9
   );
   --background-color: #ffffff;
-  --text-color: #000000;
+  --text-color: #161824;
   --icon-color: #bfbfbf;
   --bl-input-border-h-color: #5c5a56; // 输入框边框hover颜色
   --category-item-ba-color: #ededed;
   --desc-color: rgb(113, 113, 122); //描述类文字，比如卡片描述、标签文字、弹框文字等
   --common-tag-bg-color: #f0f0f0; // 标签背景颜色
   --common-tag-h-color: #213547; // 标签文字颜色
-  --right-menu-bg-color: #ffffff; // 右侧菜单背景颜色
   --btn-h-bg-color: #eeeeef; // 可点击或者有hover状态的功能按钮
   --card-border-color: #ccc; // 卡片边框颜色
   --modal-bg-color: #ffffff; // 弹框背景颜色
@@ -28,8 +27,11 @@
   --require-tip-color: #5c5a56;
   --userCenter-left-bg-color: #fafafa; // 用户中心左侧背景颜色
   --userCenter-right-bg-color: var(--background-color); // 用户中心右侧背景颜色
+  --menu-body-bg-color: #f9f9fa;
   --menu-item-bg-color: #f2f2f4;
   --menu-item-h-bg-color: #e4e4e6;
+  --primary-btn-bg-color: #F2F2F4;
+  --primary-btn-h-bg-color: #E4E4E6;
 }
 
 [data-theme='night'] {
@@ -38,12 +40,11 @@
   --icon-color: #ffffff;
   --category-item-ba-color: #232029;
   --desc-color: rgb(161, 161, 170); // 夜间主题偏白
-  --bl-input-bg-color: #141620;
+  --bl-input-bg-color: #020617;
   --bl-input-color: #ffffff;
   --bl-input-border-h-color: #ccc;
   --common-tag-bg-color: #1a1d2a;
   --common-tag-h-color: #f0f0f0;
-  --right-menu-bg-color: black;
   --btn-h-bg-color: #1a1d2a;
   --card-border-color: rgba(63, 63, 70, 0.6);
   --modal-bg-color: #3c3f41;
@@ -56,6 +57,8 @@
   --require-tip-color: wheat;
   --userCenter-left-bg-color: #2b2b2b;
   --userCenter-right-bg-color: #2b2b2b;
+  --primary-btn-bg-color: #353641;
+  --primary-btn-h-bg-color: #3e3e4a;
   --menu-body-bg-color: #252632;
   --menu-item-bg-color: #33343f;
   --menu-item-h-bg-color: #41424c;
