--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -19,7 +19,6 @@
   --common-tag-h-color: #213547; // 标签文字颜色
   --btn-h-bg-color: #eeeeef; // 可点击或者有hover状态的功能按钮
   --card-border-color: #ccc; // 卡片边框颜色
-  --modal-bg-color: #ffffff; // 弹框背景颜色
   --scrollbar-color: rgb(144 147 153 / 30%); // 滚动条颜色
   --ant-select-dropdown-bg-color: #ffffff; // 下拉框背景颜色
   --ant-select-selection-item-bg-color: #f0f0f0; // 下拉框选中标签背景颜色
@@ -32,6 +31,7 @@
   --menu-item-h-bg-color: #e4e4e6;
   --primary-btn-bg-color: #F2F2F4;
   --primary-btn-h-bg-color: #E4E4E6;
+  --modal-input-bg:#F5F5F5
 }
 
 [data-theme='night'] {
@@ -47,7 +47,6 @@
   --common-tag-h-color: #f0f0f0;
   --btn-h-bg-color: #1a1d2a;
   --card-border-color: rgba(63, 63, 70, 0.6);
-  --modal-bg-color: #3c3f41;
   --ant-select-selector-bg-color: #141620;
   --ant-select-selection-item-bg-color: #3c3f41;
   --ant-select-selection-item-anticon-close-color: #ffffff;
@@ -62,6 +61,7 @@
   --menu-body-bg-color: #252632;
   --menu-item-bg-color: #33343f;
   --menu-item-h-bg-color: #41424c;
+  --modal-input-bg:#2e2f3b;
 }
 
 /*--------------------------a-select下拉框配置----------------------*/
