--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -35,18 +35,18 @@
 }
 
 [data-theme='night'] {
-  --background-color: #020617;
+  --background-color:#161822;
   --text-color: #ffffff;
   --icon-color: #ffffff;
   --category-item-ba-color: #232029;
   --desc-color: rgb(161, 161, 170); // 夜间主题偏白
-  --bl-input-bg-color: #020617;
+  --bl-input-bg-color: var(--background-color);
   --bl-input-color: #ffffff;
   --bl-input-border-h-color: #ccc;
   --common-tag-bg-color: #1a1d2a;
   --common-tag-h-color: #f0f0f0;
   --btn-h-bg-color: #1a1d2a;
-  --card-border-color: rgba(63, 63, 70, 0.6);
+  --card-border-color: rgba(63, 63, 70);
   --ant-select-selector-bg-color: #141620;
   --ant-select-selection-item-bg-color: #3c3f41;
   --ant-select-selection-item-anticon-close-color: #ffffff;
