--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -43,7 +43,7 @@
   --bl-input-bg-color: var(--background-color);
   --bl-input-color: #ffffff;
   --bl-input-border-h-color: #ccc;
-  --common-tag-bg-color: #1a1d2a;
+  --common-tag-bg-color: #26282e;
   --common-tag-h-color: #f0f0f0;
   --btn-h-bg-color: #1a1d2a;
   --card-border-color: rgba(63, 63, 70);
