重构登录页面

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -17,7 +17,7 @@
 }
 
 :root {
-  --primary-color: #353641;
+  --primary-color: #33343f;
   --primary-text: #fff8e8;
   --primary-h-color: #3b82f6;
   font-family: '微软雅黑', serif;
