重构登录页面

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -9,6 +9,16 @@
     #ffffff,
     #ffecf9
   );
+  --bg-image2: linear-gradient(
+          30deg,
+          #ffecf9,
+          #ffffff,
+          #ffffff,
+          #ffffff,
+          #ffffff,
+          #ffffff,
+          #ffecf9
+  );
   --background-color: #ffffff;
   --text-color: #161824;
   --icon-color: #bfbfbf;
