--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -22,7 +22,7 @@
   --background-color: #ffffff;
   --text-color: #161824;
   --icon-color: #bfbfbf;
-  --bl-input-border-h-color: #5c5a56; // 输入框边框hover颜色
+  --bl-input-border-h-color: #ccc; // 输入框边框hover颜色
   --category-item-ba-color: #ededed;
   --desc-color: rgb(113, 113, 122); //描述类文字，比如卡片描述、标签文字、弹框文字等
   --common-tag-bg-color: #f0f0f0; // 标签背景颜色
