1、优化导航首页图标刷新页面的逻辑 2、优化用户信息页面返回按钮的跳转逻辑

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -22,7 +22,7 @@
   --background-color: #ffffff;
   --text-color: #161824;
   --icon-color: #bfbfbf;
-  --bl-input-border-h-color: #ccc; // 输入框边框hover颜色
+  --bl-input-border-h-color: #b2b5ba; // 输入框边框hover颜色
   --category-item-ba-color: #ededed;
   --desc-color: rgb(113, 113, 122); //描述类文字，比如卡片描述、标签文字、弹框文字等
   --common-tag-bg-color: #f0f0f0; // 标签背景颜色
@@ -52,7 +52,7 @@
   --desc-color: rgb(161, 161, 170); // 夜间主题偏白
   --bl-input-bg-color: var(--background-color);
   --bl-input-color: #ffffff;
-  --bl-input-border-h-color: #ccc;
+  --bl-input-border-h-color: #b2b5ba;
   --common-tag-bg-color: #26282e;
   --common-tag-h-color: #f0f0f0;
   --btn-h-bg-color: #1a1d2a;
