--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -1,3 +1,10 @@
+/*-------------------------IOS样式Start--------------------------*/
+* {
+  // 移动端点击时的背景设置。这个属性只适用于ios
+  -webkit-tap-highlight-color: transparent;
+}
+/*--------------------------IOS样式End-----------------------------*/
+
 /*滚动条样式*/
 ::-webkit-scrollbar {
   width: 4px;
