--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -1,24 +1,6 @@
 [data-theme='day'] {
-  --bg-image: linear-gradient(
-    150deg,
-    #ffecf9,
-    #ffffff,
-    #ffffff,
-    #ffffff,
-    #ffffff,
-    #ffffff,
-    #ffecf9
-  );
-  --bg-image2: linear-gradient(
-          30deg,
-          #ffecf9,
-          #ffffff,
-          #ffffff,
-          #ffffff,
-          #ffffff,
-          #ffffff,
-          #ffecf9
-  );
+  --bg-image: linear-gradient(150deg, #ffecf9, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff, #ffecf9);
+  --bg-image2: linear-gradient(30deg, #ffecf9, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff, #ffecf9);
   --background-color: #ffffff;
   --text-color: #161824;
   --icon-color: #bfbfbf;
@@ -42,6 +24,7 @@
   --primary-btn-bg-color: #f2f2f4;
   --primary-btn-h-bg-color: #e4e4e6;
   --modal-input-bg: #f5f5f5;
+  --user-body-bg-color: #ffffff;
 }
 
 [data-theme='night'] {
@@ -73,6 +56,7 @@
   --menu-item-h-bg-color: #41424c;
   --modal-input-bg: #2e2f3b;
   --text-night-color: white;
+  --user-body-bg-color: #35383f;
 }
 
 /*--------------------------a-select下拉框配置----------------------*/
@@ -93,7 +77,7 @@
 .ant-select-item-option-content {
   color: var(--text-night-color);
 }
-.ant-select-item-option{
+.ant-select-item-option {
   margin-bottom: 2px;
 }
 .ant-select-item-option-selected {
