--- a/src/assets/css/phone.less
+++ b/src/assets/css/phone.less
@@ -1,5 +1,11 @@
-.phone-person-container {
+.no-scrollbar {
   ::-webkit-scrollbar {
-    display: none;
+    display: none !important;
   }
+}
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
