移动端个人中心ui重构

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -60,7 +60,7 @@
 .dom-hover-click {
   cursor: pointer;
   &:hover {
-    color: var(--primary-text) !important;
+    color: #5c82ff !important;
   }
 }
 
