--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -29,7 +29,7 @@
 }
 
 [data-theme='night'] {
-  --background-color: #161822;
+  --background-color: #222222;
   --text-color: #ffffff;
   --icon-color: #ffffff;
   --category-item-ba-color: #232029;
@@ -37,10 +37,10 @@
   --bl-input-bg-color: var(--background-color);
   --bl-input-color: #ffffff;
   --bl-input-border-h-color: #b2b5ba;
-  --common-tag-bg-color: #26282e;
+  --common-tag-bg-color: #333333;
   --common-tag-h-color: #f0f0f0;
   --btn-h-bg-color: #1a1d2a;
-  --card-border-color: rgba(63, 63, 70);
+  --card-border-color: #4d4d54;
   --ant-select-selector-bg-color: #141620;
   --ant-select-selection-item-bg-color: #3c3f41;
   --ant-select-selection-item-anticon-close-color: #ffffff;
@@ -52,13 +52,13 @@
   --userCenter-right-bg-color: #2b2b2b;
   --primary-btn-bg-color: #353641;
   --primary-btn-h-bg-color: #3e3e4a;
-  --menu-body-bg-color: #252632;
+  --menu-body-bg-color: #222222;
   --menu-item-bg-color: #33343f;
   --menu-item-h-bg-color: #41424c;
-  --modal-input-bg: #2e2f3b;
+  --modal-input-bg: #222222;
   --text-night-color: white;
   --user-body-bg-color: #35383f;
-  --phone-menu-item-bg-color: #222222;
+  --phone-menu-item-bg-color: #333333;
   --phone-menu-item-border-color: #2a2a2a;
 }
 
