--- a/src/assets/css/phone.less
+++ b/src/assets/css/phone.less
@@ -9,3 +9,12 @@ body {
   height: 100%;
   overflow: hidden;
 }
+
+.container-footer-btn {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%!important;
+  border-radius: 80px!important;
+}
