--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -42,16 +42,32 @@
   display: flex;
   align-items: center;
 }
+.flex-align-center-gap {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
 
 .flex-justify-center {
   display: flex;
   justify-content: center;
+}
+.flex-justify-center-gap {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
 }
 
 .flex-center {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.flex-center-gap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
 .dom-hover {
