--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -41,7 +41,7 @@
   --common-tag-h-color: #f0f0f0;
   --btn-h-bg-color: #1a1d2a;
   --card-border-color: #4d4d54;
-  --ant-select-selector-bg-color: #141620;
+  --ant-select-selector-bg-color: var(--background-color);
   --ant-select-selection-item-bg-color: #3c3f41;
   --ant-select-selection-item-anticon-close-color: #ffffff;
   --ant-select-dropdown-bg-color: #252631;
@@ -61,35 +61,3 @@
   --phone-menu-item-bg-color: #333333;
   --phone-menu-item-border-color: #2a2a2a;
 }
-
-/*--------------------------a-select下拉框配置----------------------*/
-.ant-select-selector {
-  background-color: var(--ant-select-selector-bg-color) !important;
-  color: var(--text-color) !important;
-  .ant-select-selection-item {
-    background-color: var(--ant-select-selection-item-bg-color) !important;
-  }
-  .anticon-close {
-    color: var(--ant-select-selection-item-anticon-close-color) !important;
-  }
-}
-// 选择器下拉菜单背景颜色
-.ant-select-dropdown {
-  background-color: var(--ant-select-dropdown-bg-color) !important;
-}
-.ant-select-item-option-content {
-  color: var(--text-night-color);
-}
-.ant-select-item-option {
-  margin-bottom: 2px;
-}
-.ant-select-item-option-selected {
-  background-color: var(--ant-select-item-option-selected-bg-colot) !important;
-
-  color: white !important;
-}
-.anticon-close-circle {
-  background-color: var(--bl-input-bg-color) !important;
-  color: var(--text-color);
-}
-/*------------------------------------------------------------------*/
