--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -130,6 +130,12 @@ h1 {
   left: 50%;
   transform: translateX(-50%);
 }
+.absolute-center {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
 
 .category-item {
   margin: 5px 0;
