优化谷歌浏览器浏览器密码预填充

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -27,7 +27,7 @@
   --primary-color: #33343f;
   --primary-text: #fe2c55;
   --primary-h-color: #3b82f6;
-  font-family: '微软雅黑', serif;
+  font-family: '微软雅黑', sans-serif;
   pre {
     font-family: inherit;
   }
