新增删除笔记功能

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -18,7 +18,7 @@
 }
 
 :root {
-  --primary-color: #33343f;
+  --primary-color: #615ced;
   --primary-text: #fe2c55;
   --primary-h-color: #3b82f6;
   font-family: '微软雅黑', sans-serif;
