--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -60,4 +60,5 @@
   --user-body-bg-color: #35383f;
   --phone-menu-item-bg-color: #333333;
   --phone-menu-item-border-color: #2a2a2a;
+  --timeline-line-bg-color: grey;
 }
