笔记库主题优化

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -26,6 +26,8 @@
   --user-body-bg-color: #ffffff;
   --phone-menu-item-bg-color: #ffffff;
   --phone-menu-item-border-color: #f6f7f9;
+  --note-header-bg-color: #fbfbfd;
+  --notePage-topBody-border-color: #edf2fa;
 }
 
 [data-theme='night'] {
@@ -61,4 +63,10 @@
   --phone-menu-item-bg-color: #333333;
   --phone-menu-item-border-color: #2a2a2a;
   --timeline-line-bg-color: grey;
+
+  --note-header-bg-color: #3c3f41;
+  --notePage-topBody-border-color: #2a2a2a;
+
+  --tox-toolbar-bg: #3c3f41;
+  --tox-toolbar__group-gap: 5px;
 }
