笔记库主题优化

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -28,6 +28,7 @@
   --phone-menu-item-border-color: #f6f7f9;
   --note-header-bg-color: #fbfbfd;
   --notePage-topBody-border-color: #edf2fa;
+  --tox-toolbar-header-border-color: transparent;
 }
 
 [data-theme='night'] {
@@ -67,6 +68,8 @@
   --note-header-bg-color: #3c3f41;
   --notePage-topBody-border-color: #2a2a2a;
 
-  --tox-toolbar-bg: #3c3f41;
+  --tox-toolbar-bg: #222222;
   --tox-toolbar__group-gap: 5px;
+
+  --tox-toolbar-header-border-color: #3c3f41;
 }
