笔记库主题优化

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -71,5 +71,5 @@
   --tox-toolbar-bg: #222222;
   --tox-toolbar__group-gap: 5px;
 
-  --tox-toolbar-header-border-color: #3c3f41;
+  --tox-toolbar-header-border-color: #e3e3e3;
 }
