下拉框打开时的回填框文字颜色优化

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -258,3 +258,9 @@ h1 {
 .ant-timeline-item-content {
   color: var(--text-color);
 }
+.ant-select .ant-select-arrow {
+  color: var(--text-color);
+}
+.ant-select-single.ant-select-open .ant-select-selection-item{
+  color: var(--select-open-color);
+}
