下拉框打开时的回填框文字颜色优化

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -29,6 +29,7 @@
   --note-header-bg-color: #fbfbfd;
   --notePage-topBody-border-color: #edf2fa;
   --tox-toolbar-header-border-color: transparent;
+  --select-open-color: #bfbfbf;
 }
 
 [data-theme='night'] {
@@ -72,4 +73,5 @@
   --tox-toolbar__group-gap: 5px;
 
   --tox-toolbar-header-border-color: #e3e3e3;
+  --select-open-color: #666666;
 }
