添加simpleSql模块，图片管理新增图片预览

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -261,6 +261,9 @@ h1 {
 .ant-select .ant-select-arrow {
   color: var(--text-color);
 }
-.ant-select-single.ant-select-open .ant-select-selection-item{
+.ant-select-single.ant-select-open .ant-select-selection-item {
   color: var(--select-open-color);
+}
+.ant-table-wrapper .ant-table-thead > tr > th {
+  color: var(--text-color);
 }
