笔记管理新增标签过滤功能

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -18,6 +18,7 @@
   --require-tip-color: #5c5a56;
   --userCenter-left-bg-color: #fafafa; // 用户中心左侧背景颜色
   --userCenter-right-bg-color: var(--background-color); // 用户中心右侧背景颜色
+  --menu-cintainer-bg-color: #ffffff;
   --menu-body-bg-color: #f9f9fa;
   --menu-item-bg-color: #f2f2f4;
   --menu-item-h-bg-color: #e4e4e6;
@@ -30,6 +31,7 @@
   --notePage-topBody-border-color: #edf2fa;
   --tox-toolbar-header-border-color: transparent;
   --select-open-color: #bfbfbf;
+  --catalog-color: #585a73;
 }
 
 [data-theme='night'] {
@@ -56,6 +58,8 @@
   --userCenter-right-bg-color: #2b2b2b;
   --primary-btn-bg-color: #353641;
   --primary-btn-h-bg-color: #3e3e4a;
+
+  --menu-cintainer-bg-color: #4d5264;
   --menu-body-bg-color: #222222;
   --menu-item-bg-color: #33343f;
   --menu-item-h-bg-color: #41424c;
@@ -74,4 +78,5 @@
 
   --tox-toolbar-header-border-color: #e3e3e3;
   --select-open-color: #666666;
+  --catalog-color: #ccc;
 }
