优化首页书签列表滚动条效果

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -79,4 +79,15 @@
   --tox-toolbar-header-border-color: #e3e3e3;
   --select-open-color: #666666;
   --catalog-color: #ccc;
+
+  --w-e-select-list: #3c3f41;
+  --w-e-select-list-color: white;
+
+  --w-e-toolbar-active-bg-color: #808080 !important;
+
+  --w-e-toolbar-bg-color: #252526 !important;
+
+  --w-e-toolbar-color: white !important;
+
+  --w-e-toolbar-active-color: white !important;
 }
