笔记模块核心编辑器由tinymce替换为wangeditor

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -90,4 +90,6 @@
   --w-e-toolbar-color: white !important;
 
   --w-e-toolbar-active-color: white !important;
+
+  --w-e-textarea-slight-bg-color: #1e1f22 !important;
 }
