笔记可导出为PDF文件

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -32,6 +32,7 @@
   --tox-toolbar-header-border-color: transparent;
   --select-open-color: #bfbfbf;
   --catalog-color: #585a73;
+  --w-e-select-list: #ffffff;
 }
 
 [data-theme='night'] {
