1、编辑器的表格新增从当前单元格左侧/右侧插入列以及从上方和下方插入行、全选等快捷菜单 2、新增批量删除笔记

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -33,6 +33,8 @@
   --select-open-color: #bfbfbf;
   --catalog-color: #585a73;
   --w-e-select-list: #ffffff;
+  --noteType-hover-bg-color: #e0dfff;
+  --noteType-hover-color: #605ce5;
 }
 
 [data-theme='night'] {
