--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -1,10 +1,12 @@
 [data-theme='day'] {
-  --bg-image: linear-gradient(150deg, #ffecf9, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff, #ffecf9);
+  --bg-image: linear-gradient(150deg, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff, #ffecf9);
   --bg-image2: linear-gradient(30deg, #ffecf9, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff, #ffecf9);
   --background-color: #ffffff;
   --text-color: #161824;
   --icon-color: #bfbfbf;
   --bl-input-border-h-color: #b2b5ba; // 输入框边框hover颜色
+  --bl-input-noBorder-bg-color: #f4f4f5;
+  --bl-input-noBorder-hover-bg-color: #eaeaea;
   --category-item-ba-color: #ededed;
   --desc-color: rgb(113, 113, 122); //描述类文字，比如卡片描述、标签文字、弹框文字等
   --common-tag-bg-color: #f0f0f0; // 标签背景颜色
@@ -45,6 +47,8 @@
   --desc-color: rgb(161, 161, 170); // 夜间主题偏白
   --bl-input-bg-color: var(--background-color);
   --bl-input-color: #ffffff;
+  --bl-input-noBorder-bg-color: #303033;
+  --bl-input-noBorder-hover-bg-color: #404044;
   --bl-input-border-h-color: #b2b5ba;
   --common-tag-bg-color: #333333;
   --common-tag-h-color: #f0f0f0;
