1、问题修复 2、帮助中心新增笔记管理

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -5,8 +5,8 @@
   --text-color: #161824;
   --icon-color: #bfbfbf;
   --bl-input-border-h-color: #b2b5ba; // 输入框边框hover颜色
-  --bl-input-noBorder-bg-color: #f4f4f5;
-  --bl-input-noBorder-hover-bg-color: #eaeaea;
+  --bl-input-noBorder-bg-color: #f4f4f5; // 无边框输入框背景颜色
+  --bl-input-noBorder-hover-bg-color: #eaeaea; // 无边框输入框hover背景颜色
   --category-item-ba-color: #ededed;
   --desc-color: rgb(113, 113, 122); //描述类文字，比如卡片描述、标签文字、弹框文字等
   --common-tag-bg-color: #f0f0f0; // 标签背景颜色
