1、主题切换组件重构，新增支持跟随系统变化 2、书签和标签的新增和管理入口统一放置在顶部导航栏右侧区域 3、首页书签列表查询动画效果优化

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -272,3 +272,13 @@ h1 {
 .ant-table-wrapper .ant-table-thead > tr > th {
   color: var(--text-color);
 }
+
+.ant-dropdown-menu {
+  background-color: var(--menu-container-bg-color) !important;
+}
+.ant-dropdown-menu-item {
+  color: var(--text-color) !important;
+  &:hover{
+    background-color: var(--menu-item-h-bg-color)!important;
+  }
+}
