--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -7,6 +7,7 @@
   --bl-input-border-h-color: #b2b5ba; // 输入框边框hover颜色
   --bl-input-noBorder-bg-color: #f4f4f5; // 无边框输入框背景颜色
   --bl-input-noBorder-hover-bg-color: #eaeaea; // 无边框输入框hover背景颜色
+  --modal-input-bg: #eaeaea;
   --category-item-ba-color: #ededed;
   --desc-color: rgb(113, 113, 122); //描述类文字，比如卡片描述、标签文字、弹框文字等
   --common-tag-bg-color: #f0f0f0; // 标签背景颜色
@@ -50,6 +51,7 @@
   --bl-input-noBorder-bg-color: #303033;
   --bl-input-noBorder-hover-bg-color: #404044;
   --bl-input-border-h-color: #b2b5ba;
+  --modal-input-bg: #303033;
   --common-tag-bg-color: #333333;
   --common-tag-h-color: #f0f0f0;
   --btn-h-bg-color: #1a1d2a;
@@ -57,7 +59,7 @@
   --ant-select-selector-bg-color: var(--background-color);
   --ant-select-selection-item-bg-color: #3c3f41;
   --ant-select-selection-item-anticon-close-color: #ffffff;
-  --ant-select-dropdown-bg-color: #252631;
+  --ant-select-dropdown-bg-color: #27272a;
   --ant-select-item-option-selected-bg-colot: #41424b; // 下拉框选中项背景颜色
   --scrollbar-color: #ccc;
   --require-tip-color: wheat;
@@ -70,7 +72,6 @@
   --menu-body-bg-color: #222222;
   --menu-item-bg-color: #33343f;
   --menu-item-h-bg-color: #41424c;
-  --modal-input-bg: #222222;
   --text-night-color: white;
   --user-body-bg-color: #35383f;
   --phone-menu-item-bg-color: #333333;
