新增云空间模块

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -38,6 +38,7 @@
   --w-e-select-list: #ffffff;
   --noteType-hover-bg-color: #e0dfff;
   --noteType-hover-color: #605ce5;
+  --folder-list-border-color: #f2f2f2;
 }
 
 [data-theme='night'] {
@@ -100,5 +101,7 @@
   --w-e-toolbar-active-color: white !important;
 
   --w-e-textarea-slight-bg-color: #1e1f22 !important;
+
+  --folder-list-border-color: #333333;
 
 }
