--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -22,7 +22,7 @@
   --userCenter-left-bg-color: #fafafa; // 用户中心左侧背景颜色
   --userCenter-right-bg-color: var(--background-color); // 用户中心右侧背景颜色
   --menu-container-bg-color: #ffffff;
-  --menu-body-bg-color: #f9f9fa;
+  --menu-body-bg-color: #ffffff;
   --menu-item-bg-color: #f2f2f4;
   --menu-item-h-bg-color: #e4e4e6;
   --primary-btn-bg-color: #f2f2f4;
@@ -70,7 +70,7 @@
   --primary-btn-h-bg-color: #3e3e4a;
 
   --menu-container-bg-color: #4d5264;
-  --menu-body-bg-color: #222222;
+  --menu-body-bg-color: #333333;
   --menu-item-bg-color: #33343f;
   --menu-item-h-bg-color: #41424c;
   --text-night-color: white;
