新增云空间图片预览功能

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -284,7 +284,7 @@ h1 {
 }
 
 .ant-dropdown-menu {
-  background-color: var(--menu-container-bg-color) !important;
+  background-color: var(--menu-body-bg-color) !important;
 }
 .ant-dropdown-menu-item {
   color: var(--text-color) !important;
