表格样式优化

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -212,7 +212,7 @@ h1 {
 .ant-transfer-list-header {
   background: var(--bl-input-noBorder-bg-color) !important;
 }
-.ant-transfer-operation{
+.ant-transfer-operation {
   gap: 10px;
 }
 .ant-transfer-list-body-search-wrapper {
@@ -220,15 +220,15 @@ h1 {
     border: none !important;
   }
 }
-.ant-transfer-list-body-not-found{
-  color: var(--desc-color)!important;
+.ant-transfer-list-body-not-found {
+  color: var(--desc-color) !important;
 }
 
 .ant-input::placeholder {
   color: #7d7d7d;
 }
 .ant-table-container {
-  box-shadow:  0 0 4px var(--menu-item-h-bg-color);
+  box-shadow:var(--ant-table-boxShadow);
   border-radius: 8px;
   overflow: hidden;
 }
