--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -39,6 +39,9 @@
   --noteType-hover-bg-color: #e0dfff;
   --noteType-hover-color: #605ce5;
   --folder-list-border-color: #f2f2f2;
+
+  --table-header-bg-color: #f4f4f5;
+  --ant-table-boxShadow: 0 0 5px 0 rgba(0, 0, 0, 0.02), 0 2px 10px 0 rgba(0, 0, 0, 0.06), 0 0 1px 0 rgba(0, 0, 0, 0.3);
 }
 
 [data-theme='night'] {
@@ -103,5 +106,9 @@
   --w-e-textarea-slight-bg-color: #1e1f22 !important;
 
   --folder-list-border-color: #333333;
+
+  --table-bg-color: #18181b;
+  --table-header-bg-color: #27272a;
+  --ant-table-boxShadow: 0 0 5px 0 #444444, 0 2px 10px 0 #444444, 0 0 1px 0 #444444;
 
 }
